blank detector working, aswell if near