@@ -6,8 +6,8 @@ import java.awt.event.ActionListener;
 
 public class VisualFrame extends JFrame implements ActionListener {
 
-    boolean isZero = false;
-    int numberToSwitchTo = 0;
+
+
     int index;
 
     JPanel Buttons = new JPanel();
@@ -109,17 +109,10 @@ public class VisualFrame extends JFrame implements ActionListener {
         Object source = e.getSource();
 
         if (source == n0) {
-            System.out.println(tile.tiles.get(0));
+            System.out.println(tile.tiles.getFirst());
             index = 0;
-            isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index + 1) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
+            if(isBlank(index)) {
+                isBlankNear(index);
             }
         }
 
@@ -127,227 +120,99 @@ public class VisualFrame extends JFrame implements ActionListener {
             System.out.println(tile.tiles.get(1));
             index = 1;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n2) {
             System.out.println(tile.tiles.get(2));
             index = 2;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n3) {
             System.out.println(tile.tiles.get(3));
             index = 3;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n4) {
             System.out.println(tile.tiles.get(4));
             index = 4;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n5) {
             System.out.println(tile.tiles.get(5));
             index = 5;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n6) {
             System.out.println(tile.tiles.get(6));
             index = 6;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n7) {
             System.out.println(tile.tiles.get(7));
             index = 7;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n8) {
             System.out.println(tile.tiles.get(8));
             index = 8;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n9) {
             System.out.println(tile.tiles.get(9));
             index = 9;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n10) {
             System.out.println(tile.tiles.get(10));
             index = 10;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n11) {
             System.out.println(tile.tiles.get(11));
             index = 11;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index - 4) == 0 || tile.tiles.get(index + 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n12) {
             System.out.println(tile.tiles.get(12));
             index = 12;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n13) {
             System.out.println(tile.tiles.get(13));
             index = 13;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n14) {
             System.out.println(tile.tiles.get(14));
             index = 14;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index + 1) == 0 || tile.tiles.get(index - 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
         if (source == n15) {
             System.out.println(tile.tiles.get(15));
             index = 15;
             isBlankNear(index);
-            if (tile.tiles.get(index) != 0) {
-                if (tile.tiles.get(index - 1) == 0 || tile.tiles.get(index - 4) == 0) {
-                    System.out.println("BLANK IS NEAR");
-                } else {
-                    System.out.println("BLANK IS NOT NEAR");
-                }
-            } else {
-                System.out.println("THIS IS BLANK");
-            }
         }
 
+    }
+
+    public boolean isBlank(int index){
+        if (tile.tiles.get(index) != 0){
+            System.out.println("is blank");
+            return true;
+        }else return false;
     }
 
     public boolean isBlankNear(int index) {
